--- a/lending.ipynb
+++ b/lending.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "LendingClub is a US peer-to-peer lending company, headquartered in San Francisco, California. It was the first peer-to-peer lender to register its offerings as securities with the Securities and Exchange Commission (SEC), and to offer loan trading on a secondary market. LendingClub is the world's largest peer-to-peer lending platform.\n",
+    "\n",
+    "### Our Goal\n",
+    "\n",
+    "Given historical data on loans given out with information on whether or not the borrower defaulted (charge-off), we can build a model that can predict wether or nor a borrower will pay back their loan\n",
+    "\n",
+    "The \"loan_status\" column contains our label."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Importing libraries"
    ]
   },
