--- a/lending.ipynb
+++ b/lending.ipynb
@@ -30,7 +30,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\admin\\anaconda3\\envs\\oldpyfull\\lib\\site-packages\\pycaret\\loggers\\mlflow_logger.py:14: FutureWarning: MLflow support for Python 3.6 is deprecated and will be dropped in an upcoming release. At that point, existing Python 3.6 workflows that use MLflow will continue to work without modification, but Python 3.6 users will no longer get access to the latest MLflow features and bugfixes. We recommend that you upgrade to Python 3.7 or newer.\n",
+      "  import mlflow\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -40,7 +49,8 @@
     "pd.set_option('display.max_colwidth',None)\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import GridSearchCV\n"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from pycaret.classification import setup, compare_models"
    ]
   },
   {
@@ -10528,6 +10538,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Selection"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -10537,7 +10554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.6.13 ('oldpyfull')",
    "language": "python",
    "name": "python3"
   },
@@ -10551,12 +10568,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.6.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "610a6f344c2137faf927ea819c63f6cee33a2c04455044b28099f39fe9722347"
+    "hash": "8ebfa799a182d5bbd82c303631b489c89d4fe8db6a33de89e9b4a33c3d3c5999"
    }
   }
  },
