--- a/lending.ipynb
+++ b/lending.ipynb
@@ -11719,15 +11719,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Best models and accuracies given by pycaret (time taken: 88 mins)**"
+    "**Best models and accuracies given by pycaret (time taken: 88 mins) :**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Light Gradient Boosting Machine: 0.8893, CatBoost Classifier: 0.8889, Extreme Gradient Boosting: 0.8888, Random Forest Classifier: 0.8886, Gradient Boosting Classifier: 0.8882**"
+    "**1. Light Gradient Boosting Machine: 0.8893, 2.CatBoost Classifier: 0.8889, 3. Extreme Gradient Boosting: 0.8888, 4. Random Forest Classifier: 0.8886, 5. Gradient Boosting Classifier: 0.8882**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
