--- a/lending.ipynb
+++ b/lending.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.callbacks import EarlyStopping,TensorBoard\n",
     "from sklearn.metrics import classification_report, confusion_matrix\n",
     "import random"
    ]
